[package]
name = "bevy_log"
version = "0.9.0"
edition = "2021"
description = "Provides logging for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
trace = [ "tracing-error" ]

[dependencies]
bevy_app = { path = "../bevy_app", version = "0.9.0" }
bevy_utils = { path = "../bevy_utils", version = "0.9.0" }
bevy_ecs = { path = "../bevy_ecs", version = "0.9.0" }

# tracing-subscriber = {version = "0.3.1", features = ["registry", "env-filter"]}
tracing-subscriber = { version = "0.3.1", default-features = false, features = [
    "alloc",
    # Both of these features cause the compiler crash
    # "ansi",
    # "fmt",
    "nu-ansi-term",
    "registry",
    "sharded-slab",
    "smallvec",
    "std",
    "thread_local",
    "tracing-log",
    # "env-filter",
] }
tracing-chrome = { version = "0.7.0", optional = true }
tracing-tracy = { version = "0.10.0", optional = true }
tracing-log = "0.1.2"
tracing-error = { version = "0.2.0", optional = true }
tracing = "0.1.36"

roblox_rs = { git = "https://github.com/roblox-rs/bindings" }

[target.'cfg(target_os = "android")'.dependencies]
android_log-sys = "0.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2.1"
